添加controller swagger， 修改cloc命令
